--- a/index-3.html
+++ b/index-3.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe&display=swap" rel="stylesheet">
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="css/basic.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 	<link rel="stylesheet" href="css/layout.css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" />
 	<link rel="stylesheet" href="css/animate.css" />
@@ -38,11 +38,6 @@
 	<link rel="stylesheet" href="css/theme-colors/yellow.css" />
 	<link rel="stylesheet" href="css/theme-colors/yellow_light.css" />
 	-->
-		
-	<!--[if lt IE 9]>
-	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
 
@@ -142,7 +137,7 @@
 			<!-- Background -->
 			<div class="background-bg">
 				<div class="background-filter circle">
-					<div class="background-img" style="background-image: url(images/girl3.jpg);"></div>
+					<div class="background-img" style="background-image: url(images/me.jpg);"></div>
 				</div>
 			</div>
 
